[project]
name = "dask-cluster"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bokeh>=3.7.0",
    "dask>=2025.2.0",
    "dask-jobqueue>=0.9.0",
    "timm>=1.0.15",
]

[dependency-groups]
dev = [
    "jupyterlab>=4.3.6",
]
